--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,8 @@ name: Release
 
 on:
   workflow_run:
-    workflows: ["CI"]
-    branches: [ develop ]
+    workflows: ["Build"]
+    branches: [ master ]
     types:
       - completed
 
